--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"@playwright/test": "^1.28.1",
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.20.4",
+		"@vitejs/plugin-basic-ssl": "^1.0.1",
 		"autoprefixer": "^10.4.16",
 		"postcss": "^8.4.30",
 		"prettier": "^2.8.0",
